--- a/tools/extra_data_pseudo_label.ipynb
+++ b/tools/extra_data_pseudo_label.ipynb
@@ -2,22 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8e660346",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%cd mmdetectionㅇㅇ"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d2b38712",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "import os\n",
     "import json\n",
     "\n",
@@ -27,14 +16,14 @@
     "\n",
     "\n",
     "device = 'cuda:0'\n",
-    "config_path = \"\"\n",
-    "checkpoint = \"\"\n",
+    "config_path = \"../mmdetection/projects/CO-DETR/configs/codino/mymodel_swin_pseudo.py\" # pseudo label만드려는 모델로 변경\n",
+    "checkpoint = \"../weights/codetr_swin/final_2.pth\"\n",
     "cfg = Config.fromfile(config_path)\n",
     "\n",
-    "image_path_prefix = \"../datasets/extra_data_1/train/\"\n",
+    "image_path_prefix = \"../datasets/extra_data_2/train/\"\n",
     "save_prefix = \"../datasets/anno/\"\n",
     "\n",
-    "extra_image_num = 500\n",
+    "extra_image_num = 500 # 500 -> 1000 -> 1500으로 점점 pseudo label증가시킴\n",
     "pseudo_thres = 0.65"
    ]
   },
@@ -56,7 +45,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "with open('../datasets/extra_data_1/train/_annotations.coco.json', 'r') as file:\n",
+    "with open('../datasets/extra_data_2/train/_annotations.coco.json', 'r') as file:\n",
     "    ext_train_data = json.load(file)"
    ]
   },
